fix(b0001-program): newline

--- a/problem/b0001-program/problem.toml
+++ b/problem/b0001-program/problem.toml
@@ -23,7 +23,7 @@ int main() {
 
     int sum = a + b;
 
-    printf("The sum of %d and %d is %d\n", a, b, sum);
+    printf("The sum of %d and %d is %d\\n", a, b, sum);
 
     return 0;
 }
