--- a/problem/a0001-hello/problem.toml
+++ b/problem/a0001-hello/problem.toml
@@ -6,15 +6,18 @@ It is designed to be a ***consistency***, ***secure*** and ***scalable*** system
 Now, WOJ needs your help to test if the system is ready to run by executing a program that prints `Hello, {someone}!`.
 
 > This is the **first** problem in WOJ's official problem box!
-"""
-input = """
+
+## Input
+
 The input is a string, which is the name of the person you want to say hello to.
 The length of the string is no more than 100 characters.
-"""
-output = """
+
+## Output
+
 The output is a string, which is the sentence `Hello, {someone}!`.
-"""
-hint = """
+
+## Hint
+
 People usually have a first name and a last name.
 """
 
@@ -31,30 +34,42 @@ memory = 2
 score = 30
 
 [[testcase]]
-stdin = "World"
-stdout = "Hello, World!"
 score = 0
 sample = true
 description = "This is a sample testcase, the input is `World` and the output should be `Hello, World!`."
+[testcase.fs.prep]
+_stdin = "World"
+[testcase.fs.final]
+_stdout = "Hello, World!"
 
 [[testcase]]
-stdin = "WOJ"
-stdout = "Hello, WOJ!"
 score = 0
 sample = true
 description = "This is ***another*** sample testcase."
+[testcase.fs.prep]
+_stdin = "WOJ"
+[testcase.fs.final]
+_stdout = "Hello, WOJ!"
 
 [[testcase]]
-stdin = "WebAssembly"
-stdout = "Hello, WebAssembly!"
 score = 30
+[testcase.fs.prep]
+_stdin = "WebAssembly"
+[testcase.fs.final]
+_stdout = "Hello, WebAssembly!"
 
 [[testcase]]
-stdin = "Jacob Lin"
-stdout = "Hello, Jacob Lin!"
 score = 30
+[testcase.fs.prep]
+_stdin = "Jacob Lin"
+[testcase.fs.final]
+_stdout = "Hello, Jacob Lin!"
 
 [[testcase]]
 stdin_file = "input.txt"
 stdout_file = "output.txt"
 score = 40
+[testcase.fs.prep]
+_stdin = "rfile:input.txt"
+[testcase.fs.final]
+_stdout = "rfile:output.txt"
